--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.7",
+    "jest-mock-extended": "^3.0.4",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
