--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
 SENDGRID_API_KEY=
 SENDGRID_FROM_EMAIL=
+SUPER_USER_NAME=
+SUPER_USER_EMAIL=
+SUPER_USER_CPF=
+SUPER_USER_PHONE=
+SUPER_USER_PASSWORD=
