--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "db:migrate": "npx prisma migrate dev",
+    "db:populate": "npx ts-node ./prisma/seeders/seed.ts"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -25,6 +27,7 @@
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.3.0",
     "@prisma/client": "^4.14.0",
     "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
@@ -32,11 +35,13 @@
     "jest-mock-extended": "^3.0.4",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "nest-winston": "^1.9.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "uuid": "^9.0.0",
+    "winston": "^3.8.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
